# Die-Features

./: Die-Features.sln  DieInstaller.iss  LICENSE
DieInstaller/: DieInstaller.csproj  Program.cs  README.txt  WelcomeForm.cs
DieInstaller/wix/: DieInstaller.g.wxs
DieProperty/: ClassFactory.cpp  ClassFactory.h  DieProperty.vcxproj  DieProperty.vcxproj.filters  Prop.cpp  Prop.h  Resource.aps  Resource.rc  Source.def  die.lib  dllmain.cpp  dllmain.h  resource.h
DieService/: DieService.cpp  DieService.h  DieService.vcxproj  DieService.vcxproj.filters  ToastNotification.h  wintoastlib.cpp  wintoastlib.h
DieShellExtension/: ClassFactory.cpp  ClassFactory.h  DieShellExtension.vcxproj  DieShellExtension.vcxproj.filters  Reg.cpp  Reg.h  Resource.rc  ShellEx.cpp  ShellEx.h  dllmain.cpp  pch.cpp  pch.h  resource.h
Plugins/: CMakeLists.txt
Plugins/PluginExample1/: CMakeLists.txt  README.txt  pluginInterFace.h  pluginexample.cpp  pluginexample.h  pluginexample_global.h
Plugins/PluginManager/: CMakeLists.txt  PluginManager.cpp  PluginManager.h  README.txt  main.cpp
